--- a/page/pages/dust/index.pug
+++ b/page/pages/dust/index.pug
@@ -113,7 +113,7 @@ append content
                 // Required: main container into which dust will render.
                 #dust-container
             p(style='text-align:center')
-                strong Epilepsy Warning:
+                strong(style="color: red;") Epilepsy Warning:
                 |  Some settings can cause bright flashing.
 
         .col-md-10
@@ -121,7 +121,7 @@ append content
                 p.
                     Dust is a WebGL-based simulator / renderer for various Cellular Automata. The simulation 
                     is largely based on <a href="https://sanojian.github.io/cellauto/">CellAuto</a>, and many 
-                    of the automata came from there (see the repo for this project on <a href="https://github.com/seieibob/Dust">GitHub</a> 
+                    of the automata came from there (see the repo for this project on <a href="https://github.com/colejd/Dust">GitHub</a> 
                     for more information). My goals with this are to add interactivity and graphical features 
                     as time goes on.
                 p. 
