--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -77,7 +77,7 @@ append content
                     start the playback. Keep in mind that as of right now (wink wink nudge nudge) only one 
                     track and one voice is played, so chords won't work.
                 p.
-                    The source is available on <a href='https://github.com/seieibob/jon-trombone'>GitHub</a>.
+                    The source is available on <a href='https://github.com/colejd/jon-trombone'>GitHub</a>.
                 p.
                     Thanks to Toni Kaplan for repairing and rigging the 3D model.
 
