--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -27,26 +27,25 @@ append title
     | Media Ecology Project - Waldorf
     
 append content
-    .row
-        .col-md-10
-            video(width="640" height="480" playsinline)
-                source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
+    .row(style="margin-bottom: 2em")
+        video(width="640" height="480" playsinline)
+            source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
 
-        .col-md-10
-            section#Main
-                p.
-                    Waldorf is a system for creating and viewing rich crowd-sourced annotations on video 
-                    around the Web. I did this work at the <a href='vemilab.org'>VEMILab</a>
-                    for the <a href='https://sites.dartmouth.edu/mediaecology/'>Media Ecology Project</a>
-                    at Dartmouth University. This work was sponsored under an 
-                    <a href='https://www.knightfoundation.org/grants/20102605/'>NEH Grant</a>.
-                p.
-                    The source is available on <a href='https://www.github.com/seieibob/Waldorf'>GitHub</a>.
-                p. 
-                    Please use Chrome on this page for now.
-                    Isolating my own plugin styling from arbitrary page styling is an ongoing effort.
-                    If my code isn't working perfectly, please have a look at the 
-                    <a href='./raw.html'>emergency test page</a>. Please do not look directly at the bugs.
+    .row
+        section#Main
+            p.
+                Waldorf is a system for creating and viewing rich crowd-sourced annotations on video 
+                around the Web. I did this work at the <a href='vemilab.org'>VEMILab</a>
+                for the <a href='https://sites.dartmouth.edu/mediaecology/'>Media Ecology Project</a>
+                at Dartmouth University. This work was sponsored under an 
+                <a href='https://www.knightfoundation.org/grants/20102605/'>NEH Grant</a>.
+            p.
+                The source is available on <a href='https://www.github.com/colejd/Waldorf'>GitHub</a>.
+            p. 
+                Please use Chrome on this page for now.
+                Isolating my own plugin styling from arbitrary page styling is an ongoing effort.
+                If my code isn't working perfectly, please have a look at the 
+                <a href='./raw.html'>emergency test page</a>. Please do not look directly at the bugs.
 
 
 append body
