--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -6,7 +6,7 @@ doctype html
 html
     //
         Website by Jonathan Cole
-        This page was auto-generated with Pug. See https://github.com/seieibob/seieibob.github.io/tree/dev
+        This page was auto-generated with Pug. See https://github.com/colejd/colejd.github.io/tree/dev
 
     //- Insertion point for dinosaur ASCII
     block dinosaur
