--- a/sass/modules/mixins.scss
+++ b/sass/modules/mixins.scss
@@ -1,11 +1,17 @@
 @mixin mobile {
-    @media (max-width: 767px) {
+    @media (max-width: 467) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (max-width: 768px) {
         @content;
     }
 }
 
 @mixin desktop {
-    @media (min-width: 768px) {
+    @media (min-width: 769px) {
         @content;
     }
 }
