Remove Lobo from sidebar until fixed

--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -46,7 +46,7 @@ div
 
                     -
                         var unity_cells = [
-                            ["Buoy Data Visualization", "/pages/lobo/"],
+                            //- ["Buoy Data Visualization", "/pages/lobo/"],
                             ["Reflector", "/pages/reflector/"]
                         ]
                     +collapsible("Unity", "fa-gamepad", "unity-section", unity_cells)
