--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -68,14 +68,14 @@ append content
         .col-md-10
             section#Main
                 p.
-                    This is what happens when I have too much free time. This is a 3D scan of me hooked
+                    This is what happens when I have too much free time. Jon-Trombone is a 3D scan of me hooked
                     up to a modified version of <a href="https://dood.al/pinktrombone/">Pink Trombone</a>, 
                     which simulates the nose and throat to produce synthesized human vocals. You can play
                     around with the controls in the upper-right.
                 p.
                     Regrettably, this program supports MIDI playback. Use the GUI to load a MIDI file and
                     start the playback. Keep in mind that as of right now (wink wink nudge nudge) only one 
-                    track and one voice is played, so chords won't work.
+                    track is played, which you can control with the "Track" control in the GUI.
                 p.
                     The source is available on <a href='https://github.com/colejd/jon-trombone'>GitHub</a>.
                 p.
@@ -83,5 +83,5 @@ append content
 
 
 append body
-    script(src='js/jon-trombone.min.js')
+    script(src='jon-trombone.js')
 
