Update personal info

--- a/page/about.pug
+++ b/page/about.pug
@@ -62,13 +62,12 @@ append content
     
         section#bio
             p.
-                I'm a software developer and graduate student based in Orono, Maine. I enjoy
-                creative coding; I've done projects all over the place, from fluid simulation to 
-                articulatory speech synthesis to cellular automata. I like learning new things. 
-                Someday, I'd like to present at SIGBOVIK or SIGGRAPH.
+                I'm a software developer based in Boston, MA. I enjoy creative coding; I've done 
+                projects all over the place, from fluid simulation to articulatory speech synthesis 
+                to cellular automata. I like learning new things. Someday, I'd like to present 
+                at SIGBOVIK or SIGGRAPH.
             p.
-                Currently, I'm working toward my Master's degree in Spatial Information Science
-                and Engineering. My work focuses on the use of augmented reality technology
+                My master's thesis focused on the use of augmented reality technology
                 to help people with age-related visual impairments with spatial navigation.
             p.
                 Most of my work is open source and available at my 
@@ -78,10 +77,13 @@ append content
     section#skills
         h1 Skills
         p.
-            I've worked with a variety of languages and tools during my time at the VEMILab, 
-            and have worked extensively with Unity. Much of my time has been spent making 
-            various VR hardware communicate properly with Unity and other platforms. My 
-            academic work includes VR experiment design for human trials. I'm effective 
+            I'm well-versed in iOS app development and game development with Unity, particularly
+            for virtual reality. I've also worked a lot with augmented reality tech, both high-level
+            (ARKit) and low-level (OpenCV).
+
+            I work well in a team. In my academic career, I worked in conjunction with researchers
+            to produce VR and AR software for use in human trials. Professionally, I work with
+            a team of world-class developers to make great apps for iOS. I'm effective 
             both independently and in a team as well as remotely, and have worked in teams 
             using Scrum and Kanban methodologies.
         p.
@@ -91,19 +93,19 @@ append content
             li
                 p
                     span.highlight Languages:
-                    |  C#, Python, JavaScript, Java, C++, Swift, GLSL, SQL
+                    |  Swift, C#, Python, JavaScript, Java, C++, GLSL, SQL
             li
                 p
                     span.highlight Platforms:
-                    |  Unity, Git, iOS, OpenFrameworks, Cinder
+                    |  iOS, Unity, OpenFrameworks, Cinder
             li
                 p
                     span.highlight Frameworks:
-                    |  Node, OpenCV, OpenGL
+                    |  OpenCV, OpenGL, Node
             li
                 p
                     span.highlight Domains:
-                    |  Virtual Reality, Augmented Reality, Graphics Programming, iOS Development, Front-End Web Development
+                    |  iOS Development, Virtual Reality, Augmented Reality, Graphics Programming, Front-End Web Development
 
 
     section#work
@@ -112,12 +114,14 @@ append content
             b Current:
         ul.arrow-marks
             li
-                p VR / AR / Web / iOS / everything else developer at the #[a(href='http://www.vemilab.org/') Virtual Environment and Multimodal Interaction Laboratory]
-            li
-                p Graduate Assistant, Computer Science Department, University of Maine
+                p iOS / AR developer at #[a(href='https://www.raizlabs.com/') Raizlabs]
         p.highlight 
             b Past:
         ul.arrow-marks
+            li
+                p VR / AR / Web / iOS / everything else developer at the #[a(href='http://www.vemilab.org/') Virtual Environment and Multimodal Interaction Laboratory]
+            li
+                p Graduate Assistant, Computer Science Department, University of Maine
             li
                 p Interactive Kiosk - #[i Sea What Grows Exhibit - Maine Discovery Museum]
             li
@@ -129,7 +133,7 @@ append content
             li
                 p #[b B.S. Computer Science] - #[i Spring 2015, University of Maine]
             li
-                p #[b M.S. Spatial Information Science and Engineering] - #[i October 2017 (expected), University of Maine]
+                p #[b M.S. Spatial Information Science and Engineering] - #[i Fall 2017, University of Maine]
         
     section#contact
         h1 Contact
