--- a/page/index.pug
+++ b/page/index.pug
@@ -72,15 +72,19 @@ append content
         img.about-image.img-inline.img-responsive(src='resources/images/profile.png', alt='Portrait of Jon')
         section#intro
             p.
-                I'm a graduate student and assistant at the University of Maine at Orono 
-                studying Spatial Information Science and Engineering. My current research interests 
-                are in computer vision and augmented reality's potential for helping overcome 
-                difficulties with sensory perception.
+                I'm a software developer located in Boston. I work as an iOS developer for 
+                <a href='https://www.raizlabs.com/'>Raizlabs</a>, where we build world-class apps for mobile,
+                voice, and web. Lately, I've been interested in generative art and interactive design.
             p.
-                I work at the <a href='http://www.vemilab.org/'> Virtual Environment and Multimodal 
-                Interaction Laboratory</a>, where I write software for virtual reality, augmented reality, 
-                and computer vision in research and interactive contexts. I work a lot with Unity and 
-                OpenCV. Visit <a href='/about.html'>About Me</a> to learn more about what I know.
+                In my undergraduate and graduate studies, I worked at the 
+                <a href='http://www.vemilab.org/'> Virtual Environment and Multimodal Interaction Laboratory</a>, 
+                where I made extensive use of Unity and OpenCV for virtual reality, augmented reality, and computer 
+                vision in research and interactive contexts. Visit <a href='/about.html'>About Me</a> to learn more 
+                about what I know.
+            p.
+                Are you a museum? I've created software for three exhibits at the 
+                <a href='https://www.mainediscoverymuseum.org/'>Children's Discovery Museum</a> in Bangor, Maine, 
+                and I'd love to make some for you too. <a href='/about.html'>Let's get in touch.</a>
 
     // Empty paragraph for spacing
     //- p(style='margin-bottom: 10px')
