Link to contact info from index page

--- a/page/index.pug
+++ b/page/index.pug
@@ -84,7 +84,7 @@ append content
             p.
                 Are you a museum? I've created software for three exhibits at the 
                 <a href='https://www.mainediscoverymuseum.org/'>Children's Discovery Museum</a> in Bangor, Maine, 
-                and I'd love to make some for you too. <a href='/about.html'>Let's get in touch.</a>
+                and I'd love to make some for you too. <a href='/about.html#contact'>Let's get in touch.</a>
 
     // Empty paragraph for spacing
     //- p(style='margin-bottom: 10px')
